[package]
name = "gabriel"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bitcoin = { version = "0.32.0-rc.1", features = [
    "serde",
], path = "../rust-bitcoin/bitcoin" }
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [patch.crates-io.bitcoin-addresses]
# path = "../rust-bitcoin/addresses"

[patch.crates-io.base58ck]
path = "../rust-bitcoin/base58"

[patch.crates-io.bitcoin]
path = "../rust-bitcoin/bitcoin"

[patch.crates-io.bitcoin_hashes]
path = "../rust-bitcoin/hashes"

[patch.crates-io.bitcoin-internals]
path = "../rust-bitcoin/internals"

[patch.crates-io.bitcoin-io]
path = "../rust-bitcoin/io"

[patch.crates-io.bitcoin-primitives]
path = "../rust-bitcoin/primitives"

# [patch.crates-io.bitcoin-units]
# path = "../rust-bitcoin/units"
