[package]
name = "gabriel"
version = "0.2.0"
edition = "2021"
authors = ["Hunter Beast"]
description = "Bitcoin indexer"
publish = false

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.32.2", features = ["serde"] }
byteorder = "1.4"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.38"
hex = "0.4.3"
indicatif = "0.17.8"
nom = "7.1.3"
rayon = "1.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
log = "0.4.22"
